--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -7,32 +7,20 @@
   font-family: "Jost", sans-serif;
 }
 
-
-.active_class
-{
-text-decoration: none;
-color: white;
+.navbar-logo{
+  margin-left: -25px;
 }
-
-.blue{
-    color: blue;
-}
-.bluebook{
-    width: 100px;
-    margin-left: -32px;
-    height: 5rem;
-    background-color: black;
-}
-
-.menu_style{
+.me-auto{
   width: 100%;
-  height: 5rem;
-  color: white;
   line-height: 5rem;
-  background-color: rgb(88, 88, 205);
   display: flex;
   text-decoration: none;
   justify-content: space-around;
+}
+.navbar-header{
+  height: 90px;
+  width: 90%;
+  margin-left: 80px;
 }
 .main-nav {
     width: 100%;
@@ -42,16 +30,17 @@ color: white;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
       rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
   }
-  
+
   a{
     text-decoration: none;
     color: white;
   }
   .plan{
-    width: 70px;
+    margin-left: 600px;
+    width: 200px;
+    height: 90px;
     background-color: red;
-    padding-right: 150px;
     border-radius:20px 0 0 20px  ;
     white-space: nowrap;
-    word-wrap: break-word;
+    text-align: end;
   }
